--- a/mobdev-ionic-intro/angular.json
+++ b/mobdev-ionic-intro/angular.json
@@ -148,7 +148,8 @@
   "cli": {
     "schematicCollections": [
       "@ionic/angular-toolkit"
-    ]
+    ],
+    "analytics": "0fa44e09-dd21-4922-a56e-6859871791e4"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
